styles/globals.css
/* @tailwind base;
@tailwind components;
@tailwind utilities;

:root {
  --foreground-rgb: 0, 0, 0;
  --background-start-rgb: 214, 219, 220;
  --background-end-rgb: 255, 255, 255;
}

@media (prefers-color-scheme: dark) {
  :root {
    --foreground-rgb: 255, 255, 255;
    --background-start-rgb: 0, 0, 0;
    --background-end-rgb: 0, 0, 0;
  }
}

body {
  color: rgb(var(--foreground-rgb));
  background: linear-gradient(
      to bottom,
      transparent,
      rgb(var(--background-end-rgb))
    )
    rgb(var(--background-start-rgb));
}

@layer utilities {
  .text-balance {
    text-wrap: balance;
  }
} */

html,
body {
  margin: 0;
  padding: 0;
}

tr:nth-child(even) {
  background-color: #f2f2f2;
}

table {
  border-collapse: collapse;
}

.App {
  font-family: sans-serif;
  text-align: center;
}

.canvas-container {
  position: relative;
  width: 90%;
  margin: auto; /* Centers horizontally */
  display: flex;
  justify-content: center; /* Ensures children are centered */
  align-items: center; /* Centers vertically if parent allows */
}

.canvas-container canvas {
  position: absolute;
  left: 0;
  top: 0;
  z-index: 1; /* All canvases have the same starting z-index */
}

.canvas-container canvas:last-child {
  z-index: 2; /* This raises the z-index of the second (top) canvas */
}

.table-container {
  position: relative;
  display: inline;
}

